--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,7 +26,7 @@ import { Icon } from "astro-icon/components";
           </div>
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />
-            <a href="mailto:info@greengroveconstruction.com">info@greengroveconstruction.com</a>
+            <a href="mailto:info@walker-cole.com">info@walker-cole.com</a>
           </div>
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />
