--- a/src/components/sectionhead.astro
+++ b/src/components/sectionhead.astro
@@ -4,7 +4,7 @@ const { align = "center" } = Astro.props;
 
 <div class:list={["mt-16", align === "center" && "text-center"]}>
   <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    <slot name="title">GreenGroveConstruction</slot>
+    <slot name="title">Walker and Cole Construction</slot>
   </h1>
   <p class="text-lg mt-4 text-slate-600">
     <slot name="desc"></slot>
