--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -26,12 +26,12 @@ import Link from "@components/ui/link.astro";
     <div class="mt-6 flex flex-col sm:flex-row gap-3 justify-center lg:justify-start">
       <Link
         href="contact"
-        class="bg-primary text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-primary/90 transition duration-300">
+        class="bg-accent text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-accent/90 transition duration-300">
         Get Your Free Quote
       </Link>
       <Link
         href="home-services"
-        class="border border-accent text-accent px-6 py-3 rounded-full font-bold inline-block hover:bg-accent/90 hover:text-white transition duration-300">
+        class="border border-primary text-primary px-6 py-3 rounded-full font-bold inline-block hover:bg-primary hover:text-white transition duration-300">
         Schedule a Home Service
       </Link>
     </div>
