--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -30,7 +30,7 @@ import Link from "@components/ui/link.astro";
         Get Your Free Quote
       </Link>
       <Link
-        href="home-services"
+        href="contact"
         class="bg-[#004643] text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-[#003531] hover:scale-105 transition duration-300 ease-in-out shadow-lg">
         Schedule a Home Service
       </Link>
