--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -18,9 +18,9 @@
     </div>
     <div>
       <h4 class="text-xl font-bold mb-2">Contact Us</h4>
-      <p>Email: <a href="mailto:info@walker-cole.com" class="text-green-400 hover:text-green-300">info@walker-cole.com</a></p>
+      <p>Email: <a href="mailto:contact@walker-cole.com" class="text-green-400 hover:text-green-300">contact@walker-cole.com</a></p>
       <p>Phone: <a href="tel:+1-805-395-9517" class="text-green-400 hover:text-green-300">+1 (805) 395-9517</a></p>
-      <p>Address: 1234 Green Grove Lane, Santa Barbara, CA</p>
+      <p>Address: Santa Barbara, CA</p>
       <div class="flex space-x-4 mt-4">
         <a href="#" class="hover:text-green-400">
           <!-- Facebook Icon -->
