--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -5,25 +5,25 @@ import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
-  {
-    title: "Features",
-    path: "#",
-    children: [
-      { title: "Action", path: "/" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
-      { title: "404 Page", path: "/404" },
-    ],
-  },
+ // {
+ //   title: "Features",
+ //   path: "#",
+ //   children: [
+ //     { title: "Action", path: "/" },
+ //     { title: "Another action", path: "#" },
+ //     { title: "Dropdown Submenu", path: "#" },
+ //     { title: "404 Page", path: "/404" },
+ //   ],
+ // },
   // {
   //  title: "Pricing",
   //  path: "/pricing",
   // },
-  {
-  title: "Projects",
-  path: "/projects",
-  },
-  {
+  // {
+  // title: "Projects",
+  // path: "/projects",
+  // },
+   {
     title: "About",
     path: "/about",
   },
