--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,22 +15,22 @@ import { Icon } from "astro-icon/components";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-secondary">Contact Walker and Cole Construction</h2>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
+        <h2 class="font-medium text-2xl text-primary">Contact Walker and Cole Construction</h2>
+        <p class="text-lg leading-relaxed text-textDark mt-3">
           Have something to say? We're here to help. Fill out the form, send us an email, or give us a call.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
+          <div class="flex items-center mt-2 space-x-2 text-textDark">
+            <Icon class="text-secondary w-4 h-4" name="uil:map-marker" />
             <span>1234 Green Grove Lane, Santa Barbara, CA</span>
           </div>
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />
-            <a href="mailto:info@walker-cole.com">info@walker-cole.com</a>
+          <div class="flex items-center mt-2 space-x-2 text-textDark">
+            <Icon class="text-secondary w-4 h-4" name="uil:envelope" />
+            <a href="mailto:info@walker-cole.com" class="hover:text-accent1">info@walker-cole.com</a>
           </div>
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />
-            <a href="tel:+1234567890">+1 (234) 567-890</a>
+          <div class="flex items-center mt-2 space-x-2 text-textDark">
+            <Icon class="text-secondary w-4 h-4" name="uil:phone" />
+            <a href="tel:+1234567890" class="hover:text-accent1">+1 (234) 567-890</a>
           </div>
         </div>
       </div>
