--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,13 +46,13 @@ const teamMembers = [
       <p class="text-lg leading-relaxed text-textDark mb-10">
         {aboutDescription}
       </p>
-      <div class="bg-primary p-8 rounded-lg text-white mb-10">
+      <div class="bg-primary p-8 rounded-lg text-white mb-10 pb-16">
         <h3 class="text-2xl font-bold mb-4">Our Vision</h3>
         <p class="text-lg leading-relaxed">
           {visionStatement}
         </p>
       </div>
-      <div class="bg-secondary p-8 rounded-lg text-white mb-10">
+      <div class="bg-secondary p-8 rounded-lg text-white mb-10 pb-16">
         <h3 class="text-2xl font-bold mb-4">Our Values</h3>
         <ul class="list-disc pl-5 text-left text-lg leading-relaxed">
           {values.map((value) => (
@@ -62,7 +62,7 @@ const teamMembers = [
       </div>
     </div>
 
-    <div class="grid md:grid-cols-3 gap-8 mx-auto max-w-6xl mt-12">
+    <div class="grid md:grid-cols-3 gap-8 mx-auto max-w-6xl mt-12 pb-16">
       {teamMembers.map((member) => (
         <div class="group p-8 rounded-lg border border-gray-300 bg-background shadow-md hover:shadow-lg transition">
           <div class="text-center">
